--- a/book-es/header.html
+++ b/book-es/header.html
@@ -1,12 +1,1 @@
-<table>
-
-<tr>
-
-<td valign="top" width="100" bgcolor="#b6459a">
-</td>
-
-<td valign="top" width="600" style="padding: 20px 20px;">
-
-<p>
-<a href="http://amzn.to/1VUYQUU">Buy this book at Amazon.com</a>
-
+<div style="max-width:640px; padding:20px; border-left:100px solid #b6459a">
